--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="col-md-12 text-center">
               <div class="home_text wow fadeInUp animated">
                 <h2>HOANG QUY NGUYEN</h2>
-                <p>a frond-end developers and writer</p>
+                <p>a frond-end developer excited on writing</p>
                 <img src="images/shape.png" alt="" />
               </div>
             </div>
@@ -130,7 +130,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 text-center">
-            <div class="single_service wow fadeInUp" data-wow-delay="1s">
+            <div class="single_service wow fadeInUp" data-wow-delay="0.5s">
               <i class="icon-desktop"></i>
               <h2>Development</h2>
               <p>
@@ -140,24 +140,24 @@
             </div>
           </div>
           <div class="col-md-3 text-center">
-            <div class="single_service wow fadeInUp" data-wow-delay="2s">
+            <div class="single_service wow fadeInUp" data-wow-delay="1s">
               <i class="icon-picture"></i>
               <h2>Design</h2>
               <p>
-                Photoshop, Final Cut, Indesign, Audition, Camtasia, Pro
-                Presenter.
+                Photoshop, Final Cut, Indesign, Illustrator, Audition, Camtasia,
+                Pro Presenter.
               </p>
             </div>
           </div>
           <div class="col-md-3 text-center">
-            <div class="single_service wow fadeInUp" data-wow-delay="3s">
+            <div class="single_service wow fadeInUp" data-wow-delay="1.5s">
               <i class="icon-pencil"></i>
               <h2>Writing</h2>
               <p>Wordpress, Spiderum, Blogger, Wix.</p>
             </div>
           </div>
           <div class="col-md-3 text-center">
-            <div class="single_service wow fadeInUp" data-wow-delay="4s">
+            <div class="single_service wow fadeInUp" data-wow-delay="2s">
               <i class="icon-magnifying-glass"></i>
               <h2>Language</h2>
               <p>English.</p>
@@ -182,7 +182,7 @@
         <div class="row">
           <div class="col-md-4 wow fadeInLeft animated">
             <div class="single_progress_bar">
-              <h2>DEVELOPMENT - 70%</h2>
+              <h2>DEVELOPMENT - 80%</h2>
               <div class="progress">
                 <div
                   class="progress-bar"
@@ -190,9 +190,9 @@
                   aria-valuenow="60"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 70%"
+                  style="width: 80%"
                 >
-                  <span class="sr-only">70% Complete</span>
+                  <span class="sr-only">80% Complete</span>
                 </div>
               </div>
             </div>
@@ -242,37 +242,35 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 wow fadeInRight animated">
+          <div class="col-md-4 wow fadeInRight animated text-justify">
             <p class="about_us_p">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Sed quia non numquam eius modi tempora.
+              Hi, My name is Quy. I'm 25 year old in 2020. <br />
+              I graduated at Duy Tan University, major Software Engineering with
+              3.2/4.0 GPA in 2017, and then, I got to work immediately at
+              SmartDev LLC for a times before I have to leave for military
+              service. With all of my ambition, I didn't waste the time during
+              that 2 years. I practiced the foreign languages skill and hold on
+              these technical knowledge that I've learned.
             </p>
           </div>
-          <div class="col-md-4 wow fadeInRight animated">
+          <div class="col-md-4 wow fadeInRight animated text-justify">
             <p class="about_us_p">
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
-              ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
-              non numquam eius modi tempora incidunt ut labore et dolore magnam
-              aliquam quaerat voluptatem.
+              I just came back on early 2020, and decided back to work on
+              software development, I choose React native to be new path,
+              although I do Android and the web development most of the time
+              before. It's not a problem. Cause of I'm attracted to learn new
+              thing. It make my day joyful and happy, so I will keep do it at
+              least a few more decade. That's the tone for me.
             </p>
           </div>
         </div>
       </div>
     </section>
 
-    <section
-      class="testimonial text-center wow fadeInUp animated"
-      id="TESTIMONIAL"
-    >
-      <div class="container">
+    <section class="testimonial text-center wow fadeInUp animated">
+      <div class="container" style="position: relative">
         <div class="icon">
-          <i class="icon-quote"></i>
+          <i class="icon-target"></i>
         </div>
         <div class="owl-carousel">
           <div class="single_testimonial text-center wow fadeInUp animated">
@@ -284,18 +282,23 @@
           </div>
           <div class="single_testimonial text-center">
             <p>
-              Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-              consectetur, adipisci velit, sed quia non numquam eius<br />
-              modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-              voluptatem.
+              Somebody has everything from birth. I don't. But I can earn it by
+              myself
             </p>
-            <h4>-JOHN SMITH</h4>
+            <h4>-Me</h4>
+          </div>
+          <div class="single_testimonial text-center">
+            <p>
+              Everything that happens in life has its reasons. Don't be afraid,
+              don't say if.
+            </p>
+            <h4>-Life has no If</h4>
           </div>
         </div>
       </div>
     </section>
 
-    <div class="fun_facts">
+    <div class="fun_facts" id="TESTIMONIAL">
       <section
         class="header parallax home-parallax page"
         id="fun_facts"
@@ -309,21 +312,21 @@
                   <div class="col-md-4">
                     <div class="single_count">
                       <i class="icon-toolbox"></i>
-                      <h3>10</h3>
+                      <h3>5</h3>
                       <p>Project Done</p>
                     </div>
                   </div>
                   <div class="col-md-4">
                     <div class="single_count">
                       <i class="icon-clock"></i>
-                      <h3>1700+</h3>
-                      <p>Hours Worked</p>
+                      <h3>10</h3>
+                      <p>months Worked</p>
                     </div>
                   </div>
                   <div class="col-md-4">
                     <div class="single_count">
                       <i class="icon-trophy"></i>
-                      <h3>3</h3>
+                      <h3>1</h3>
                       <p>Awards Won</p>
                     </div>
                   </div>
@@ -344,13 +347,12 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <div class="work_title wow fadeInUp animated">
-              <h1>Latest Works</h1>
+              <h1>History Works</h1>
               <img src="images/shape.png" alt="" />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna <br />
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex.
+                These's a few highlight projects that I've done when I was in
+                university until now, and I attached time for each project in
+                period.
               </p>
             </div>
           </div>
@@ -358,27 +360,27 @@
       </div>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-4 no_padding">
+          <div class="col-md-6 no_padding">
             <div class="single_image">
-              <img src="images/w1.jpg" alt="" />
+              <img src="images/w1.png" alt="" />
               <div class="image_overlay">
-                <a href="">View Full Project</a>
-                <h2>drawing</h2>
-                <h4>with pencil colors</h4>
+                <h2>Text summarized application</h2>
+                <h4>by Java</h4>
+                <a>Second Prize Researching Award at university - 4/2017</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4 no_padding">
+          <div class="col-md-6 no_padding">
             <div class="single_image">
-              <img src="images/w2.jpg" alt="" />
+              <img src="images/w2.png" alt="" />
               <div class="image_overlay">
-                <a href="">View Full Project</a>
-                <h2>drawing</h2>
-                <h4>with pencil colors</h4>
+                <h2>Renew PCS banking application</h2>
+                <h4>by Kotlin Android, MVP framework</h4>
+                <a href="">Work at SmartDev LLC - 8/2017</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4 no_padding">
+          <!-- <div class="col-md-4 no_padding">
             <div class="single_image">
               <img src="images/w3.jpg" alt="" />
               <div class="image_overlay">
@@ -387,36 +389,36 @@
                 <h4>with pencil colors</h4>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="row pad_top">
           <div class="col-md-4 no_padding">
             <div class="single_image">
-              <img src="images/w4.jpg" alt="" />
+              <img src="images/w5.png" alt="" />
               <div class="image_overlay">
-                <a href="">View Full Project</a>
-                <h2>drawing</h2>
-                <h4>with pencil colors</h4>
+                <h2>Pawn shop web</h2>
+                <h4>by Java, SQL, Struts framework</h4>
+                <a href="">Project intern at FPT company - 8/2016</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 no_padding">
             <div class="single_image">
-              <img src="images/w5.jpg" alt="" />
+              <img src="images/w4.png" alt="" />
               <div class="image_overlay">
-                <a href="">View Full Project</a>
-                <h2>drawing</h2>
-                <h4>with pencil colors</h4>
+                <h2>Jgooooo application</h2>
+                <h4>by React native, TypeScript, GraphQL, NodeJS ...</h4>
+                <a href="">Work at Uto Technology - 6/2020</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 no_padding">
             <div class="single_image last_padding">
-              <img src="images/w6.jpg" alt="" />
+              <img src="images/w6.png" alt="" />
               <div class="image_overlay">
-                <a href="">View Full Project</a>
-                <h2>drawing</h2>
-                <h4>with pencil colors</h4>
+                <h2>Manage library application</h2>
+                <h4>by React native, ES6</h4>
+                <a href="">2/2020</a>
               </div>
             </div>
           </div>
@@ -430,9 +432,8 @@
             <div class="left">
               <h2>LOOKING FOR EXCLUSIVE DIGITAL SERVICES?</h2>
               <p>
-                Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae
-                neque et porttitor. Integer non dapibus diam, ac eleifend
-                lectus.
+                Cause of under security contract, I can't show all of source
+                code here. Please contact to me for take a look.
               </p>
             </div>
           </div>
@@ -440,7 +441,7 @@
             <div class="baton">
               <a href="#CONTACT">
                 <button type="button" class="btn btn-primary cs-btn">
-                  Let's Talk
+                  Let's contact
                 </button>
               </a>
             </div>
@@ -455,19 +456,15 @@
             <div class="contact_title wow fadeInUp animated">
               <h1>get in touch</h1>
               <img src="images/shape.png" alt="" />
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna<br />
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex.
-              </p>
+              <!-- <p>
+              </p> -->
             </div>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-md-3 wow fadeInLeft animated">
+          <div class="col-md-4 wow fadeInLeft animated">
             <div class="single_contact_info">
               <h2>Call Me</h2>
               <p>+84 342 20 05 03</p>
@@ -481,46 +478,33 @@
               <p>123/54/1 Cu Chinh Lan St, Thanh Khe district, Da Nang</p>
             </div>
           </div>
-          <div class="col-md-9 wow fadeInRight animated">
-            <form class="contact-form" action="">
-              <div class="row">
-                <div class="col-md-6">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="name"
-                    placeholder="Name"
-                  />
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="email"
-                    placeholder="Email"
-                  />
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="subject"
-                    placeholder="Subject"
-                  />
-                </div>
-                <div class="col-md-6">
-                  <textarea
-                    class="form-control"
-                    id="message"
-                    rows="25"
-                    cols="10"
-                    placeholder="  Message Texts..."
-                  ></textarea>
-                  <button
-                    type="button"
-                    class="btn btn-default submit-btn form_submit"
-                  >
-                    SEND MESSAGE
-                  </button>
-                </div>
-              </div>
-            </form>
+          <div class="col-md-4 wow fadeInLeft animated">
+            <div class="single_contact_info">
+              <h2>Skype Me</h2>
+              <p>Quy Hoang</p>
+            </div>
+            <div class="single_contact_info">
+              <h2>Messenger</h2>
+              <a href="https://www.messenger.com/t/halle1104">m.me/halle1104</a>
+            </div>
+            <div class="single_contact_info">
+              <h2>LinkedIn</h2>
+              <a
+                href="https://www.linkedin.com/in/quy-nguyen-682085153"
+                target="_blank"
+                >linkedin.com/in/quy-nguyen-682085153
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4 wow fadeInLeft animated">
+            <div class="single_contact_info">
+              <h2>Visit blog</h2>
+              <p>halledev.wordpress.com</p>
+            </div>
+            <div class="single_contact_info">
+              <h2>Github</h2>
+              <p>github.com/Halle520</p>
+            </div>
           </div>
         </div>
       </div>
@@ -553,7 +537,7 @@
                 <h2>Follow Me on Here</h2>
                 <ul class="icon_list">
                   <li>
-                    <a href="https://www.facebook.com/halle1104"
+                    <a target="_blank" href="https://www.facebook.com/halle1104"
                       ><i class="fa fa-facebook"></i
                     ></a>
                   </li>
@@ -564,7 +548,11 @@
                     <a href=""><i class="fa fa-google-plus"></i></a>
                   </li>
                   <li>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a
+                      target="_blank"
+                      href="https://www.linkedin.com/in/quy-nguyen-682085153"
+                      ><i class="fa fa-linkedin"></i
+                    ></a>
                   </li>
                   <li>
                     <a href=""><i class="fa fa-dribbble"></i></a>
@@ -581,10 +569,6 @@
                 <p>
                   &copy; Quy 2020. All Right Reserved By
                   <a href="" target="_blank">Hoang Q. Nguyen</a>
-                </p>
-                <p>
-                  Somebody has everything from birth. I don't. But I can earn it
-                  by myself
                 </p>
               </div>
             </div>
