--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Profiles</title>
+    <title>Quy's Profile</title>
     <!-- Google Font -->
     <link
       href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800"
@@ -416,7 +416,7 @@
             <div class="single_image last_padding">
               <img src="images/w6.png" alt="" />
               <div class="image_overlay">
-                <h2>Manage library application</h2>
+                <h2>Food booking application</h2>
                 <h4>by React native, ES6</h4>
                 <a href="">2/2020</a>
               </div>
