--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <link
       rel="stylesheet"
-      href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
     <!-- Preloader -->
