update repo git

--- a/index.html
+++ b/index.html
@@ -503,7 +503,9 @@
             </div>
             <div class="single_contact_info">
               <h2>Github</h2>
-              <p>github.com/Halle520</p>
+              <a href="https://github.com/CaPhee" target="_blank"
+                >github.com/CaPhee</a
+              >
             </div>
           </div>
         </div>
