--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <div class="single_image last_padding">
               <img src="images/w6.png" alt="" />
               <div class="image_overlay">
-                <h2>Food booking application</h2>
+                <h2>Booking application</h2>
                 <h4>by React native, ES6</h4>
                 <a href="">2/2020</a>
               </div>
