--- a/index.html
+++ b/index.html
@@ -256,11 +256,12 @@
           <div class="col-md-4 wow fadeInRight animated text-justify">
             <p class="about_us_p">
               I just came back on early 2020, and decided back to work on
-              software development, I choose React native to be new path,
-              although I do Android and the web development most of the time
-              before. It's not a problem. Cause of I'm attracted to learn new
-              thing. It make my day joyful and happy, so I will keep do it at
-              least a few more decade. That's the tone for me.
+              software development, I choose React native to become a React
+              Native developer, although I do Android and the web development
+              most of the time before. It's not a problem. Cause of I'm
+              attracted to learn new thing. It make my day joyful and happy, so
+              I will keep do it at least a few more decade. That's the tone for
+              me.
             </p>
           </div>
         </div>
@@ -302,7 +303,7 @@
       <section
         class="header parallax home-parallax page"
         id="fun_facts"
-        style="background-position: 50% -150px"
+        style="background-position: 90% -150px"
       >
         <div class="section_overlay">
           <div class="container">
@@ -319,7 +320,7 @@
                   <div class="col-md-4">
                     <div class="single_count">
                       <i class="icon-clock"></i>
-                      <h3>10</h3>
+                      <h3>13</h3>
                       <p>months Worked</p>
                     </div>
                   </div>
@@ -362,21 +363,24 @@
         <div class="row">
           <div class="col-md-6 no_padding">
             <div class="single_image">
-              <img src="images/w1.png" alt="" />
+              <img src="images/w4.png" alt="" />
               <div class="image_overlay">
-                <h2>Text summarized application</h2>
-                <h4>by Java</h4>
-                <a>Second Prize Researching Award at university - 4/2017</a>
+                <h2>Jgooooo application</h2>
+                <h4>
+                  by React native, TypeScript, MVVM, GraphQL, NodeJS, Socket IO,
+                  Code push, Animation ...
+                </h4>
+                <a href="">Work at Uto Technology - 2/2020</a>
               </div>
             </div>
           </div>
           <div class="col-md-6 no_padding">
-            <div class="single_image">
-              <img src="images/w2.png" alt="" />
+            <div class="single_image last_padding">
+              <img src="images/w6.png" alt="" />
               <div class="image_overlay">
-                <h2>Renew PCS banking application</h2>
-                <h4>by Kotlin Android, MVP framework</h4>
-                <a href="">Work at SmartDev LLC - 8/2017</a>
+                <h2>Boobytrap application</h2>
+                <h4>by React native, ES6, Map, Push notification, Socket IO</h4>
+                <a href="">2/2020</a>
               </div>
             </div>
           </div>
@@ -394,6 +398,26 @@
         <div class="row pad_top">
           <div class="col-md-4 no_padding">
             <div class="single_image">
+              <img src="images/w2.png" alt="" />
+              <div class="image_overlay">
+                <h2>Renew PCS banking application</h2>
+                <h4>by Kotlin Android, MVP framework, OCR Scan card ...</h4>
+                <a href="">Work at SmartDev LLC - 8/2017</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 no_padding">
+            <div class="single_image">
+              <img src="images/w1.png" alt="" />
+              <div class="image_overlay">
+                <h2>Text summarized application</h2>
+                <h4>by Java, Graph analyze library</h4>
+                <a>Second Prize Researching Award at university - 4/2017</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 no_padding">
+            <div class="single_image">
               <img src="images/w5.png" alt="" />
               <div class="image_overlay">
                 <h2>Pawn shop web</h2>
@@ -402,53 +426,10 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 no_padding">
-            <div class="single_image">
-              <img src="images/w4.png" alt="" />
-              <div class="image_overlay">
-                <h2>Jgooooo application</h2>
-                <h4>by React native, TypeScript, GraphQL, NodeJS ...</h4>
-                <a href="">Work at Uto Technology - 6/2020</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 no_padding">
-            <div class="single_image last_padding">
-              <img src="images/w6.png" alt="" />
-              <div class="image_overlay">
-                <h2>Booking application</h2>
-                <h4>by React native, ES6</h4>
-                <a href="">2/2020</a>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
-    <section class="call_to_action">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 wow fadeInLeft animated">
-            <div class="left">
-              <h2>LOOKING FOR EXCLUSIVE DIGITAL SERVICES?</h2>
-              <p>
-                Cause of under security contract, I can't show all of source
-                code here. Please contact to me for take a look.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-3 col-md-offset-1 wow fadeInRight animated">
-            <div class="baton">
-              <a href="#CONTACT">
-                <button type="button" class="btn btn-primary cs-btn">
-                  Let's contact
-                </button>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <section class="contact" id="CONTACT">
       <div class="container">
         <div class="row">
@@ -481,7 +462,7 @@
           <div class="col-md-4 wow fadeInLeft animated">
             <div class="single_contact_info">
               <h2>Skype Me</h2>
-              <p>Quy Hoang</p>
+              <p>/quy.iatb</p>
             </div>
             <div class="single_contact_info">
               <h2>Messenger</h2>
