--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
       type="text/css"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora:ital@1&family=Rock+3D&display=swap"
+      rel="stylesheet"
+    />
     <!-- Font Awesome -->
 
     <link
@@ -105,8 +117,8 @@
           <div class="row">
             <div class="col-md-12 text-center">
               <div class="home_text wow fadeInUp animated">
-                <h2>HOANG QUY NGUYEN</h2>
-                <p>a frond-end developer excited on writing</p>
+                <h1>HOANG QUY NGUYEN</h1>
+                <p>a frond-end developer interested on art</p>
                 <img src="images/shape.png" alt="" />
               </div>
             </div>
@@ -128,37 +140,44 @@
 
     <section class="services" id="SERVICE">
       <div class="container">
-        <div class="row">
-          <div class="col-md-3 text-center">
+        <div class="row service-element">
+          <div class="col-md-2 text-center">
             <div class="single_service wow fadeInUp" data-wow-delay="0.5s">
               <i class="icon-desktop"></i>
               <h2>Development</h2>
               <p>
-                Java Script, Type Script, React native, GraphQL, NodeJS,
-                Express, HTML5, CSS3, Git, Kotlin, Java, Android Studio ...
+                Java Script, Type Script, ReactJS, React native, GraphQL,
+                NodeJS, Express, HTML5, CSS3, Amplify, Firebase ...
               </p>
             </div>
           </div>
-          <div class="col-md-3 text-center">
+          <div class="col-md-2 text-center">
+            <div class="single_service wow fadeInUp" data-wow-delay="0.5s">
+              <i class="icon-desktop"></i>
+              <h2>Source control</h2>
+              <p>Git, Github, Gitlab, Jira, ESlint, Webpack...</p>
+            </div>
+          </div>
+          <div class="col-md-2 text-center">
             <div class="single_service wow fadeInUp" data-wow-delay="1s">
               <i class="icon-picture"></i>
-              <h2>Design</h2>
+              <h2>Media</h2>
               <p>
-                Photoshop, Final Cut, Indesign, Illustrator, Audition, Camtasia,
-                Pro Presenter.
+                Photoshop, Final Cut, Indesign, Illustrator, Motion, Audition,
+                Camtasia, Pro Presenter, OBS...
               </p>
             </div>
           </div>
-          <div class="col-md-3 text-center">
+          <div class="col-md-2 text-center">
             <div class="single_service wow fadeInUp" data-wow-delay="1.5s">
               <i class="icon-pencil"></i>
               <h2>Writing</h2>
-              <p>Wordpress, Spiderum, Blogger, Wix.</p>
+              <p>Wordpress, Spiderum, Blogger, Notion, Wix.</p>
             </div>
           </div>
-          <div class="col-md-3 text-center">
+          <div class="col-md-2 text-center">
             <div class="single_service wow fadeInUp" data-wow-delay="2s">
-              <i class="icon-magnifying-glass"></i>
+              <i class="icon-mic"></i>
               <h2>Language</h2>
               <p>English.</p>
               <p>Japanese.</p>
@@ -197,37 +216,7 @@
               </div>
             </div>
             <div class="single_progress_bar">
-              <h2>DESIGN - 40%</h2>
-              <div class="progress">
-                <div
-                  class="progress-bar"
-                  role="progressbar"
-                  aria-valuenow="60"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 40%"
-                >
-                  <span class="sr-only">40% Complete</span>
-                </div>
-              </div>
-            </div>
-            <div class="single_progress_bar">
-              <h2>WRITING - 50%</h2>
-              <div class="progress">
-                <div
-                  class="progress-bar"
-                  role="progressbar"
-                  aria-valuenow="60"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 50%"
-                >
-                  <span class="sr-only">50% Complete</span>
-                </div>
-              </div>
-            </div>
-            <div class="single_progress_bar">
-              <h2>LANGUAGE - 60%</h2>
+              <h2>DESIGN - 60%</h2>
               <div class="progress">
                 <div
                   class="progress-bar"
@@ -241,27 +230,55 @@
                 </div>
               </div>
             </div>
+            <div class="single_progress_bar">
+              <h2>WRITING - 50%</h2>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-valuenow="50"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 50%"
+                >
+                  <span class="sr-only">50% Complete</span>
+                </div>
+              </div>
+            </div>
+            <div class="single_progress_bar">
+              <h2>LANGUAGE - 70%</h2>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-valuenow="70"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 70%"
+                >
+                  <span class="sr-only">70% Complete</span>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-md-4 wow fadeInRight animated text-justify">
             <p class="about_us_p">
-              Hi, My name is Quy. I'm 25 year old in 2020. <br />
+              Hi, My name is Quy. I'm 26 year old in 2021. <br />
               I graduated at Duy Tan University, major Software Engineering with
-              3.2/4.0 GPA in 2017, and then, I got to work immediately at
-              SmartDev LLC for a times before I have to leave for military
-              service. With all of my ambition, I didn't waste the time during
-              that 2 years. I practiced the foreign languages skill and hold on
-              these technical knowledge that I've learned.
+              3.2/4.0 GPA in 2017. Then, I've worked for a time. I got
+              experienced about some role in software development, such as back
+              end developer, front end developer, team leader. Besides, I also
+              work for media team and presenter team at my church in Media team
             </p>
           </div>
           <div class="col-md-4 wow fadeInRight animated text-justify">
             <p class="about_us_p">
-              I just came back on early 2020, and decided back to work on
-              software development, I choose React native to become a React
-              Native developer, although I do Android and the web development
-              most of the time before. It's not a problem. Cause of I'm
-              attracted to learn new thing. It make my day joyful and happy, so
-              I will keep do it at least a few more decade. That's the tone for
-              me.
+              What I aim to be isn't work hard, but balancing between life and
+              work. Sound leisurely but hard to do. It consume more time than
+              just do 8 hours a day and relax. Cause of I'm attracted to
+              learning. So learn from life is my other job. It makes my day more
+              joyful and happy, so I will keep do it at least a few more
+              decades. That's the tone for me.
             </p>
           </div>
         </div>
@@ -313,22 +330,22 @@
                   <div class="col-md-4">
                     <div class="single_count">
                       <i class="icon-toolbox"></i>
-                      <h3>5</h3>
+                      <h3>20</h3>
                       <p>Project Done</p>
                     </div>
                   </div>
                   <div class="col-md-4">
                     <div class="single_count">
                       <i class="icon-clock"></i>
-                      <h3>13</h3>
+                      <h3>24+</h3>
                       <p>months Worked</p>
                     </div>
                   </div>
                   <div class="col-md-4">
                     <div class="single_count">
                       <i class="icon-trophy"></i>
-                      <h3>1</h3>
-                      <p>Awards Won</p>
+                      <h3>3</h3>
+                      <p>Certificate</p>
                     </div>
                   </div>
                 </div>
@@ -361,7 +378,7 @@
       </div>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-6 no_padding">
+          <div class="col-md-4 no_padding">
             <div class="single_image">
               <img src="images/w4.png" alt="" />
               <div class="image_overlay">
@@ -374,7 +391,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 no_padding">
+          <div class="col-md-4 no_padding">
             <div class="single_image last_padding">
               <img src="images/w6.png" alt="" />
               <div class="image_overlay">
@@ -384,16 +401,19 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-4 no_padding">
+          <div class="col-md-4 no_padding">
             <div class="single_image">
-              <img src="images/w3.jpg" alt="" />
+              <img src="images/w3.png" alt="" />
               <div class="image_overlay">
-                <a href="">View Full Project</a>
-                <h2>drawing</h2>
-                <h4>with pencil colors</h4>
+                <h2>Space rocket</h2>
+                <h4>
+                  by ReactJS, Firebase, Recoil, Graphql, Typescript, Material
+                  UI, Atomic Design
+                </h4>
+                <a href="">Work at Rikai Technology 4-8/2020</a>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
         <div class="row pad_top">
           <div class="col-md-4 no_padding">
@@ -549,10 +569,7 @@
           <div class="row">
             <div class="col-md-12 text-center">
               <div class="copyright_text wow fadeInUp animated">
-                <p>
-                  &copy; Quy 2020. All Right Reserved By
-                  <a href="" target="_blank">Hoang Q. Nguyen</a>
-                </p>
+                <p></p>
               </div>
             </div>
           </div>
